--- a/food-service/build.gradle
+++ b/food-service/build.gradle
@@ -1,34 +1,57 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot'
-    id 'io.spring.dependency-management'
+    id 'org.springframework.boot' version '3.3.7'
+    id 'io.spring.dependency-management' version '1.1.7'
+}
+
+group = 'com.ai.food.tracker'
+version = '0.0.1-SNAPSHOT'
+
+java {
+    toolchain { languageVersion = JavaLanguageVersion.of(17) }
+}
+
+repositories {
+    mavenCentral()
+}
+
+dependencyManagement {
+    imports {
+        // Если используете Spring Cloud
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.4"
+    }
 }
 
 dependencies {
-    // Spring MVC and JPA
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // ==== 1. WebFlux + Reactor Netty ====
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    // На всякий случай явно подтягиваем Netty
+    implementation 'io.projectreactor.netty:reactor-netty:1.1.6'
 
-    // Security (JWT)
+    // ==== 2. Reactive Security (Resource Server + JWT) ====
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.11.5'
-    runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'org.springframework.security:spring-security-oauth2-jose'
 
-    // Kafka, AI integration, and Swagger
+    // ==== 3. OpenAPI UI (Reactive) ====
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.1.0'
+
+    // ==== 4. Kafka Producer ====
     implementation 'org.springframework.kafka:spring-kafka'
+
+    // ==== 5. OpenAI API (Spring AI) ====
     implementation 'org.springframework.ai:spring-ai-starter-model-openai:1.0.0'
-    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
-    // Embedded database for development
-    runtimeOnly 'com.h2database:h2'
-
-    // Lombok for boilerplate code reduction
+    // ==== 6. Lombok ====
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    // Testing dependencies
+    // ==== 7. Tests ====
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
     testImplementation 'org.springframework.security:spring-security-test'
+}
+
+test {
+    useJUnitPlatform()
 }
